<resources>
    <string name="app_name">project</string>
    <string name="id">아이디</string>
    <string name="psw">비밀번호</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="mbti">MBTI</string>
    <string name="inputid">아이디를 입력하세요</string>
    <string name="inputpsw">비밀번호를 입력하세요</string>
    <string name="inputname">이름을 입력하세요</string>
    <string name="inputage">나이를 입력하세요</string>
    <string name="inputmbti">>MBTI를 입력하세요</string>
    <string name="login">로그인</string>
    <string name="exit">종료</string>
    <string name="signup">회원가입</string>
    <string name="check">ID 중복확인</string>
</resources>