<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:srcCompat="@drawable/join" />

    <TextView
        android:id="@+id/textView1_2"
        style="@style/textview1"
        android:text="@string/id"
        android:typeface="sans"
        android:layout_marginHorizontal="25dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextId1_2"
            style="@style/edittext1"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/inputid"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1_2" />

        <Button
            android:id="@+id/btncheck"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/check"
            android:textColor="@color/white"
            android:background="@drawable/shape4"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3_2"
        style="@style/textview1"
        android:text="@string/name"
        android:typeface="sans"
        android:layout_marginHorizontal="25dp"
        />
    <EditText
        android:id="@+id/editTextName3_2"
        style="@style/edittext1"
        android:hint="@string/inputname"
        android:inputType="text"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3_2" />

    <TextView
        android:id="@+id/textView2_2"
        style="@style/textview1"
        android:text="@string/psw"
        android:layout_marginHorizontal="25dp"
        />
    <EditText
        android:id="@+id/editTextPassword2_2"
        style="@style/edittext1"
        android:hint="@string/inputpsw"
        android:inputType="textPassword"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2_2" />

    <TextView
        android:id="@+id/textView4_2"
        style="@style/textview1"
        android:text="@string/age"
        android:layout_marginHorizontal="25dp"
        />
    <EditText
        android:id="@+id/editTextAge4_2"
        style="@style/edittext1"
        android:hint="@string/inputage"
        android:inputType="text"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4_2"
        />

    <TextView
        android:id="@+id/textView5_2"
        style="@style/textview1"
        android:text="@string/mbti"
        android:layout_marginHorizontal="25dp"
        />

    <EditText
        android:id="@+id/editTextMbti5_2"
        style="@style/edittext1"
        android:hint="@string/inputmbti"
        android:inputType="text"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5_2"
        />

    <Button
        android:id="@+id/btnjoin2_2"
        style="@style/edittext1"
        android:text="@string/signup"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/shape3"
        android:textColor="@color/white"
         />

</LinearLayout>